--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${DB_PASSWORD:biochain-123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate/JPA configuration
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
